Fix layout on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,7 @@
   border: none;
   margin-left: 50%;
   background: none;
-  font-size: 69px;
+  font-size: 3.5rem;
   margin-top: 179px;
   color: whitesmoke;
   transform: translate(-50%, -50%);
@@ -122,8 +122,10 @@
 .meditationtime {
   color: white;
   position: relative;
-  font-size: 50px;
+  font-size: 2.5rem;
   bottom: auto;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 /* .streakbar section */
